--- a/scss/useful-classes.scss
+++ b/scss/useful-classes.scss
@@ -36,6 +36,11 @@
 .float-left { float: left !important;}
 .float-none { float: none !important;}
 
+.slides.firstSlide .hideForFirstSlide,
+.slides.lastSlide .hideForLastSlide {
+  display: none;
+}
+
 //specific
 .block { display: block !important;}
 .inlineBlock { display: inline-block !important;}
@@ -97,9 +102,9 @@
 }
 
 //roundness
-.round { border-radius: 999px; }
-.rounded { border-radius: $rounded-border-radius; }
-.rectangular { border-radius: 0; }
+.round { border-radius: 999px !important; }
+.rounded { border-radius: $rounded-border-radius !important; }
+.rectangular { border-radius: 0 !important; }
 
 //opacity
 .opacity-0 { opacity: 0 !important;}
